[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Fonts/Exo-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Graphics/spritesheets/ButtonContainerPressed.png" type="Texture" id=2]
[ext_resource path="res://assets/Graphics/spritesheets/ButtonContainerHover.png" type="Texture" id=3]
[ext_resource path="res://assets/Graphics/spritesheets/ButtonContainer.png" type="Texture" id=4]
[ext_resource path="res://scripts/interface/ButtonsContainer.gd" type="Script" id=5]
[ext_resource path="res://assets/Graphics/spritesheets/score.png" type="Texture" id=6]
[ext_resource path="res://scripts/interface/Interface.gd" type="Script" id=7]
[ext_resource path="res://assets/Graphics/spritesheets/armor.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[node name="Interface" type="CanvasLayer" groups=["interface"]]
script = ExtResource( 7 )

[node name="FinalScore" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -416.0
margin_right = 181.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
text = "Pontuação Final:"
align = 1
valign = 1

[node name="ButtonsContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 5 )

[node name="PlayGame" type="TextureButton" parent="ButtonsContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -54.0
margin_right = 30.0
margin_bottom = -22.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="ButtonsContainer/PlayGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -20.0
margin_right = 30.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Play"
align = 1
valign = 1

[node name="Quit" type="TextureButton" parent="ButtonsContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 1.0
margin_right = 30.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="ButtonsContainer/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1

[node name="Score Container" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 47.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Score Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = -3.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
valign = 1

[node name="HealthHud" type="Sprite" parent="."]
position = Vector2( 308, 25 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
hframes = 5
frame = 4

[connection signal="pressed" from="ButtonsContainer/PlayGame" to="ButtonsContainer" method="on_Play_pressed"]
[connection signal="pressed" from="ButtonsContainer/Quit" to="ButtonsContainer" method="on_Quit_pressed"]
